--- a/ipython_notebooks/fabien antoine@cgi com's Python notebook.ipynb
+++ b/ipython_notebooks/fabien antoine@cgi com's Python notebook.ipynb
@@ -1,17 +1,31 @@
 {
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python"
     },
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.9.19",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
+    "tags": [],
+    "customFields": {},
     "creator": "fabien.antoine@cgi.com",
     "createdOn": 1734805257533,
-    "tags": [],
-    "customFields": {}
+    "modifiedBy": "fabien.antoine@cgi.com"
   },
   "nbformat": 4,
-  "nbformat_minor": 0,
+  "nbformat_minor": 1,
   "cells": [
     {
       "execution_count": 0,
@@ -44,7 +58,9 @@
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "source": [],
+      "source": [
+        ""
+      ],
       "outputs": []
     }
   ]
