Saved Jupyter notebook 'nc gen data'

--- a/ipython_notebooks/nc gen data.ipynb
+++ b/ipython_notebooks/nc gen data.ipynb
@@ -59,7 +59,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import random\nfrom datetime import datetime, timedelta\nimport json\nimport csv\nimport os\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()\nllm_list \u003d project.list_llms()\nprint(llm_list)\nfor llm in llm_list:\n    print(f\"- {llm.description} (id: {llm.id})\")"
+        "import random\nfrom datetime import datetime, timedelta\nimport json\nimport csv\nimport os\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()\nllm_list \u003d project.list_llms()\nfor llm in llm_list:\n    print(f\"- {llm.description} (id: {llm.id})\")"
       ],
       "outputs": []
     },
