Saved Jupyter notebook 'nc gen data'

--- a/ipython_notebooks/nc gen data.ipynb
+++ b/ipython_notebooks/nc gen data.ipynb
@@ -32,34 +32,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "%pylab inline"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "import dataiku\nfrom dataiku import pandasutils as pdu\nimport pandas as pd"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "# Example: load a DSS dataset as a Pandas dataframe\nmydataset \u003d dataiku.Dataset(\"mydataset\")\nmydataset_df \u003d mydataset.get_dataframe()"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "import random\nfrom datetime import datetime, timedelta\nimport json\nimport csv\nimport os\nproject \u003d client.get_default_project()\nllm_list \u003d project.list_llms()\nfor llm in llm_list:\n    print(f\"- {llm.description} (id: {llm.id})\")"
+        "import dataiku\nfrom dataiku import pandasutils as pdu\nimport pandas as pd\nproject \u003d client.get_default_project()\nllm_list \u003d project.list_llms()\nfor llm in llm_list:\n    print(f\"- {llm.description} (id: {llm.id})\")"
       ],
       "outputs": []
     },
@@ -69,6 +42,15 @@
       "metadata": {},
       "source": [
         "LLM_ID \u003d \"openai:OpenAI-FA:gpt-4o\"\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()\nllm \u003d project.get_llm(LLM_ID)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Example: load a DSS dataset as a Pandas dataframe\nmydataset \u003d dataiku.Dataset(\"mydataset\")\nmydataset_df \u003d mydataset.get_dataframe()"
       ],
       "outputs": []
     },
