Saved Jupyter notebook 'nc gen data'

--- a/ipython_notebooks/nc gen data.ipynb
+++ b/ipython_notebooks/nc gen data.ipynb
@@ -50,7 +50,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Example: load a DSS dataset as a Pandas dataframe\nmydataset \u003d dataiku.Dataset(\"mydataset\")\nmydataset_df \u003d mydataset.get_dataframe()"
+        "# Example: load a DSS dataset as a Pandas dataframe\ntickets_type_ds \u003d dataiku.Dataset(\"Tickets_Type\")\ntickets_type_df \u003d tickets_type_ds.get_dataframe()\nprint(tickets_type_df)"
       ],
       "outputs": []
     },
