Saved Jupyter notebook 'nc gen data'

--- a/ipython_notebooks/nc gen data.ipynb
+++ b/ipython_notebooks/nc gen data.ipynb
@@ -50,7 +50,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Example: load a DSS dataset as a Pandas dataframe\ntickets_type_ds \u003d dataiku.Dataset(\"NC_types_random\")\ntickets_type_df \u003d tickets_type_ds.get_dataframe()\nprint(tickets_type_df)"
+        "# Example: load a DSS dataset as a Pandas dataframe\ntickets_type_ds \u003d dataiku.Dataset(\"NC_types_random\")\ntickets_type_df \u003d tickets_type_ds.get_dataframe()\ntickets_type_df[\u0027nc_event_date\u0027] \u003d pd.to_datetime(tickets_type_df[\u0027nc_event_date\u0027])\nprint(tickets_type_df)"
       ],
       "outputs": []
     },
