Saved Jupyter notebook 'notebook editor for compute_AXB1Cyno'

--- a/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
+++ b/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
@@ -42,9 +42,11 @@
     {
       "execution_count": 0,
       "cell_type": "code",
-      "metadata": {},
+      "metadata": {
+        "scrolled": true
+      },
       "source": [
-        "import"
+        "import importlib.metadata\n\nfor dist in importlib.metadata.distributions():\n    print(f\"{dist.metadata[\u0027Name\u0027]}\u003d\u003d{dist.version}\")"
       ],
       "outputs": []
     },
