Saved Jupyter notebook 'notebook editor for compute_AXB1Cyno'

--- a/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
+++ b/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
@@ -46,7 +46,25 @@
         "scrolled": true
       },
       "source": [
-        "import importlib.metadata\n\nfor dist in importlib.metadata.distributions():\n    print(f\"{dist.metadata[\u0027Name\u0027]}\u003d\u003d{dist.version}\")"
+        "import importlib.metadata\n\nfor dist in importlib.metadata.distributions():\n    if dist.metadata[\u0027Name\u0027] \u003d\u003d \"markitdown\":\n        print(f\"{dist.metadata[\u0027Name\u0027]}\u003d\u003d{dist.version}\")"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "print(dir(markitdown))"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "from markitdown import MarkItDown\n"
       ],
       "outputs": []
     },
