Saved Jupyter notebook 'notebook editor for compute_AXB1Cyno'

--- a/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
+++ b/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
@@ -1,8 +1,8 @@
 {
   "metadata": {
     "kernelspec": {
-      "name": "py-dku-venv-markitdown",
-      "display_name": "Python (env markitdown)",
+      "name": "python3",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python"
     },
     "hide_input": false,
@@ -18,14 +18,14 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "associatedRecipe": "compute_AXB1Cyno",
+    "customFields": {},
     "creator": "fabien.antoine@cgi.com",
-    "createdOn": 1735159724979,
+    "modifiedBy": "fabien.antoine@cgi.com",
     "tags": [
       "recipe-editor"
     ],
-    "modifiedBy": "fabien.antoine@cgi.com",
-    "customFields": {}
+    "createdOn": 1735159724979,
+    "associatedRecipe": "compute_AXB1Cyno"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
