--- a/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
+++ b/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
@@ -1,11 +1,23 @@
 {
   "metadata": {
     "kernelspec": {
-      "display_name": "Python (env markitdown)",
-      "language": "python",
-      "name": "py-dku-venv-markitdown"
+      "name": "python3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python"
     },
     "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.9.21",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
     "customFields": {},
     "creator": "fabien.antoine@cgi.com",
     "tags": [
