Saved Jupyter notebook 'notebook editor for compute_a220_tech_docs_content'

--- a/ipython_notebooks/notebook editor for compute_a220_tech_docs_content.ipynb
+++ b/ipython_notebooks/notebook editor for compute_a220_tech_docs_content.ipynb
@@ -1,16 +1,26 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python (env markitdown)",
-      "language": "python",
-      "name": "py-dku-venv-markitdown"
+      "name": "python3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python"
     },
-    "associatedRecipe": "compute_a220_tech_docs_content",
-    "dkuGit": {
-      "lastInteraction": 0
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.9.21",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
     },
+    "tags": [
+      "recipe-editor"
+    ],
     "creationTag": {
       "versionNumber": 0,
       "lastModifiedBy": {
@@ -18,41 +28,35 @@
       },
       "lastModifiedOn": 1735315006284
     },
-    "creator": "fabien.antoine@cgi.com",
+    "associatedRecipe": "compute_a220_tech_docs_content",
+    "dkuGit": {
+      "lastInteraction": 0
+    },
+    "customFields": {},
     "createdOn": 1735315006284,
-    "tags": [
-      "recipe-editor"
-    ],
-    "customFields": {}
+    "creator": "fabien.antoine@cgi.com",
+    "modifiedBy": "fabien.antoine@cgi.com"
   },
+  "nbformat": 4,
+  "nbformat_minor": 1,
   "cells": [
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "# -*- coding: utf-8 -*-\n",
-        "import dataiku\n",
-        "import pandas as pd, numpy as np\n",
-        "from dataiku import pandasutils as pdu\n",
-        "\n",
-        "# Read recipe inputs\n",
-        "A220_tech_docs_prep \u003d dataiku.Folder(\"AXB1Cyno\")\n",
-        "A220_tech_docs_prep_info \u003d A220_tech_docs_prep.get_info()\n",
-        "\n",
-        "\n",
-        "# Compute recipe outputs\n",
-        "# TODO: Write here your actual code that computes the outputs\n",
-        "# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n",
-        "\n",
-        "a220_tech_docs_content_df \u003d ... # Compute a Pandas dataframe to write into a220_tech_docs_content\n",
-        "\n",
-        "\n",
-        "# Write recipe outputs\n",
-        "a220_tech_docs_content \u003d dataiku.Dataset(\"a220_tech_docs_content\")\n",
-        "a220_tech_docs_content.write_with_schema(a220_tech_docs_content_df)"
-      ]
+        "import dataiku\nimport io\nimport pandas as pd\nfrom bs4 import BeautifulSoup\nfrom langchain.text_splitter import (\n    RecursiveCharacterTextSplitter,\n    HTMLHeaderTextSplitter,\n)\n\nfolder \u003d dataiku.Folder(\"AXB1Cyno\")"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# -------------------------------------------------------------------------------- NOTEBOOK-CELL: CODE\nheaders \u003d [\n    (\"h1\", \"h1\"),\n    (\"h2\", \"h2\"),\n    (\"h3\", \"h3\"),\n    (\"h4\", \"h4\"),\n    (\"h5\", \"h5\"),\n    (\"h6\", \"h6\"),\n]\n\nhtml_splitter \u003d HTMLHeaderTextSplitter(\n    headers_to_split_on\u003dheaders, return_each_element\u003dFalse\n)\ntext_splitter \u003d RecursiveCharacterTextSplitter(chunk_size\u003d1000, chunk_overlap\u003d200)\n\n# -------------------------------------------------------------------------------- NOTEBOOK-CELL: CODE\nd \u003d {\"chunk\": [], \"url\": []}\n\nfor path in folder.list_paths_in_partition():\n    url \u003d \"https://\" + path[1:].replace(\"\u003d\", \"/\")\n    with folder.get_download_stream(path) as stream:\n        s \u003d io.BytesIO(stream.read()).read().decode(\"utf-8\")\n        result \u003d text_splitter.split_documents(html_splitter.split_text(s))\n        if \"/plugins/\" in url:\n            soup \u003d BeautifulSoup(s, \"html.parser\")\n\n    for i in range(len(result)):\n        header \u003d \" \u003e \".join(\n            [\n                result[i].metadata[k[1]].replace(\"#\", \"\").strip()\n                for k in headers\n                if k[1] in result[i].metadata\n                if result[i].metadata[k[1]] is not None\n            ]\n        )\n\n        if \"/plugins/\" in url:\n            title \u003d soup.find(\"title\").string.replace(\" | Dataiku\", \"\")\n            header \u003d title + (\" \u003e \" if len(header) \u003e 0 else \"\") + header\n        d[\"chunk\"].append((header + \"\\n\\n\" + result[i].page_content).strip())\n        d[\"url\"].append(url)\n\n# -------------------------------------------------------------------------------- NOTEBOOK-CELL: CODE\ndf \u003d pd.DataFrame.from_dict(d)\ndf[\"chunk_id\"] \u003d range(len(df))\ndataiku.Dataset(\"a220_tech_docs_content\").write_with_schema(df)\n"
+      ],
+      "outputs": []
     }
   ]
 }
