Saved Jupyter notebook 'notebook editor for compute_a220_tech_docs_content'

--- a/ipython_notebooks/notebook editor for compute_a220_tech_docs_content.ipynb
+++ b/ipython_notebooks/notebook editor for compute_a220_tech_docs_content.ipynb
@@ -72,6 +72,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "import langchain\n\n# Vérifier si langchain est installé\nlangchain_available \u003d importlib.util.find_spec(\"langchain\") is not None\nprint(f\"langchain est installé : {langchain_available}\")\n\n# Vérifier si langchain.textsplitter est disponible\ntextsplitter_available \u003d importlib.util.find_spec(\"langchain.textsplitter\") is not None\nprint(f\"langchain.textsplitter est disponible : {textsplitter_available}\")"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         ""
       ],
       "outputs": []
