Saved Jupyter notebook 'notebook editor for compute_a220_tech_docs_content'

--- a/ipython_notebooks/notebook editor for compute_a220_tech_docs_content.ipynb
+++ b/ipython_notebooks/notebook editor for compute_a220_tech_docs_content.ipynb
@@ -1,14 +1,14 @@
 {
   "metadata": {
     "kernelspec": {
-      "name": "py-dku-venv-markitdown",
-      "display_name": "Python (env markitdown)",
+      "name": "py-dku-venv-flask",
+      "display_name": "Python (env flask)",
       "language": "python"
     },
     "hide_input": false,
     "language_info": {
       "name": "python",
-      "version": "3.11.11",
+      "version": "3.9.21",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
