Saved Jupyter notebook 'notebook editor for compute_a220_tech_docs_content'

--- a/ipython_notebooks/notebook editor for compute_a220_tech_docs_content.ipynb
+++ b/ipython_notebooks/notebook editor for compute_a220_tech_docs_content.ipynb
@@ -1,14 +1,14 @@
 {
   "metadata": {
     "kernelspec": {
-      "name": "py-dku-venv-flask",
-      "display_name": "Python (env flask)",
+      "name": "py-dku-venv-markitdown",
+      "display_name": "Python (env markitdown)",
       "language": "python"
     },
     "hide_input": false,
     "language_info": {
       "name": "python",
-      "version": "3.9.21",
+      "version": "3.11.11",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
@@ -72,7 +72,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import importlib\n\n# Vérifier si langchain est installé\nlangchain_available \u003d importlib.util.find_spec(\"langchain\") is not None\nprint(f\"langchain est installé : {langchain_available}\")\n\n# Vérifier si langchain.textsplitter est disponible\ntextsplitter_available \u003d importlib.util.find_spec(\"langchain.textsplitter\") is not None\nprint(f\"langchain.textsplitter est disponible : {textsplitter_available}\")"
+        "import importlib\nimport\n# Vérifier si langchain est installé\nlangchain_available \u003d importlib.util.find_spec(\"langchain\") is not None\nprint(f\"langchain est installé : {langchain_available}\")\n\n# Vérifier si langchain.textsplitter est disponible\ntextsplitter_available \u003d importlib.util.find_spec(\"langchain-text-splitters\") is not None\nprint(f\"langchain.textsplitter est disponible : {textsplitter_available}\")"
       ],
       "outputs": []
     },
