Saved Jupyter notebook 'fabien antoine@cgi com's Python notebook'

--- a/ipython_notebooks/fabien antoine@cgi com's Python notebook.ipynb
+++ b/ipython_notebooks/fabien antoine@cgi com's Python notebook.ipynb
@@ -1,17 +1,31 @@
 {
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python"
     },
-    "creator": "fabien.antoine@cgi.com",
-    "createdOn": 1735385108589,
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.9.21",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
+    "customFields": {},
     "tags": [],
-    "customFields": {}
+    "createdOn": 1735385108589,
+    "creator": "fabien.antoine@cgi.com",
+    "modifiedBy": "fabien.antoine@cgi.com"
   },
   "nbformat": 4,
-  "nbformat_minor": 0,
+  "nbformat_minor": 1,
   "cells": [
     {
       "execution_count": 0,
@@ -36,7 +50,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Example: load a DSS dataset as a Pandas dataframe\nmydataset \u003d dataiku.Dataset(\"mydataset\")\nmydataset_df \u003d mydataset.get_dataframe()"
+        "# Example: load a DSS dataset as a Pandas dataframe\nmydataset \u003d dataiku.Dataset(\"NC_types_random_500_final_structured\")\nmydataset_df \u003d mydataset.get_dataframe(sampling\u003d\u0027head\u0027, limit\u003d(max_rows))\n\nmydataset_df[\u0027nc_event_date\u0027] \u003d mydataset_df[\u0027nc_event_date\u0027].astype(str)\nmydataset_df[\u0027analysis_history\u0027] \u003d mydataset_df[\u0027analysis_history\u0027].apply(json.loads)\n\n# Pandas dataFrames are not directly JSON serializable, use to_json()\ndata \u003d mydataset_df.to_dict(orient\u003d\u0027records\u0027)"
       ],
       "outputs": []
     },
@@ -44,7 +58,9 @@
       "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "source": [],
+      "source": [
+        ""
+      ],
       "outputs": []
     }
   ]
