Renamed Jupyter notebook from 'fabien antoine@cgi com's Python notebook' to 'debut api'

--- a/ipython_notebooks/debut api.ipynb
+++ b/ipython_notebooks/debut api.ipynb
@@ -22,7 +22,8 @@
     "tags": [],
     "createdOn": 1735385108589,
     "creator": "fabien.antoine@cgi.com",
-    "modifiedBy": "fabien.antoine@cgi.com"
+    "modifiedBy": "fabien.antoine@cgi.com",
+    "versionNumber": 1
   },
   "nbformat": 4,
   "nbformat_minor": 1,
