Saved Jupyter notebook 'notebook editor for compute_AXB1Cyno'

--- a/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
+++ b/ipython_notebooks/notebook editor for compute_AXB1Cyno.ipynb
@@ -45,7 +45,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# -*- coding: utf-8 -*-\nimport dataiku\nimport os\nfrom markitdown import MarkItDown\nimport tempfile\n\nmd \u003d MarkItDown()\n\n# Folders\nA220_tech_docs \u003d dataiku.Folder(\"SoQWOnhR\")          # Input folder\nA220_tech_docs_prep \u003d dataiku.Folder(\"AXB1Cyno\")    # Output folder\n\n# Lister les fichiers PDF\npdf_files \u003d [f for f in A220_tech_docs.list_paths_in_partition() if f.lower().endswith(\".pdf\") ]\npdf_files \u003d [f for f in A220_tech_docs.list_paths_in_partition() if f.lower().endswith(\".pdf\") and \"hydro\" in f.lower()]\n\nfor pdf_file in pdf_files:\n    # Lire le contenu PDF\n    with A220_tech_docs.get_download_stream(pdf_file) as f:\n        pdf_data \u003d f.read()\n\n    # Utiliser un fichier temporaire pour la conversion\n    with tempfile.NamedTemporaryFile(delete\u003dTrue, suffix\u003d\".pdf\") as temp_pdf:\n        temp_pdf.write(pdf_data)\n        temp_pdf.flush()  # Assurez-vous que le contenu est écrit sur le disque\n\n        # Convertir en Markdown\n        md_content \u003d md.convert(temp_pdf.name)\n\n        # Afficher le nombre de lignes dans le contenu Markdown\n        num_lines \u003d len(md_content.text_content.splitlines())\n        print(f\"Nombre de lignes : {num_lines}\")\n\n        # Écrire le fichier .md\n        md_file_name \u003d os.path.splitext(pdf_file)[0] + \".md\"\n        with A220_tech_docs_prep.get_writer(md_file_name) as writer:\n            writer.write(md_content.text_content.encode(\u0027utf-8\u0027))"
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport os\nfrom markitdown import MarkItDown\nimport tempfile\n\nmd \u003d MarkItDown()\n\n# Folders\nA220_tech_docs \u003d dataiku.Folder(\"SoQWOnhR\")          # Input folder\nA220_tech_docs_prep \u003d dataiku.Folder(\"AXB1Cyno\")    # Output folder\n\n# Lister les fichiers PDF\npdf_files \u003d [f for f in A220_tech_docs.list_paths_in_partition() if f.lower().endswith(\".pdf\") ]\npdf_files \u003d [f for f in A220_tech_docs.list_paths_in_partition() if f.lower().endswith(\".pdf\") and \"hydro\" in f.lower()]\nprint(pdf_files)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "for pdf_file in pdf_files:\n    # Lire le contenu PDF\n    with A220_tech_docs.get_download_stream(pdf_file) as f:\n        pdf_data \u003d f.read()\n\n    # Utiliser un fichier temporaire pour la conversion\n    with tempfile.NamedTemporaryFile(delete\u003dTrue, suffix\u003d\".pdf\") as temp_pdf:\n        temp_pdf.write(pdf_data)\n        temp_pdf.flush()  # Assurez-vous que le contenu est écrit sur le disque\n\n        # Convertir en Markdown\n        md_content \u003d md.convert(temp_pdf.name)\n\n        # Afficher le nombre de lignes dans le contenu Markdown\n        num_lines \u003d len(md_content.text_content.splitlines())\n        print(f\"Nombre de lignes : {num_lines}\")\n\n        # Écrire le fichier .md\n        md_file_name \u003d os.path.splitext(pdf_file)[0] + \".md\"\n        with A220_tech_docs_prep.get_writer(md_file_name) as writer:\n            writer.write(md_content.text_content.encode(\u0027utf-8\u0027))"
       ],
       "outputs": []
     }
